bump sbt and coursier (#348)
* bump sbt and coursier

* windows java 8

* downgrade sbt, not on servers